# indic-llm-eval

./: README.md  gpt_translation.ipynb  hf_translation.ipynb  modal jupyter.ipynb  modal_volume.py  pyproject.toml
nbs/: batch_translate.ipynb  explore_mmlu.ipynb  hf_translation.ipynb  romanized.ipynb  translation.ipynb
nbs/to-hi/: IndicTrans2.ipynb
src/: translation.py
