[tool.poetry]
name = "indic-llm-eval"
version = "0.0.1"
description = "Indic LLM Evaluation Library"
authors = ["NirantK <nirant.bits@gmail.com>"]
license = "CC BY-SA 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
huggingface-hub = "^0.19.4"
datasets = "^2.15.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"